// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message[Base] should render correctly  1`] = `
<div>
  <button
    class="so-button-secondary so-button-button so-button-outline"
    type="button"
  >
    <span
      class="so-button-space-wrapper"
    >
      Show
    </span>
  </button>
  <button
    class="so-button-primary so-button-button"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span
      class="so-button-space-wrapper"
    >
      Info
    </span>
  </button>
  <button
    class="so-button-success so-button-button"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span
      class="so-button-space-wrapper"
    >
      Success
    </span>
  </button>
  <button
    class="so-button-warning so-button-button"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span
      class="so-button-space-wrapper"
    >
      Warn
    </span>
  </button>
  <button
    class="so-button-danger so-button-button"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span
      class="so-button-space-wrapper"
    >
      Error
    </span>
  </button>
  <button
    class="so-button-secondary so-button-button so-button-outline"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span
      class="so-button-space-wrapper"
    >
      Close All
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render correctly  2`] = `
<div>
  <button
    class="so-button-secondary so-button-button so-button-outline"
    type="button"
  >
    <span
      class="so-button-space-wrapper"
    >
      Duration 10 s.
    </span>
  </button>
  <button
    class="so-button-secondary so-button-button so-button-outline"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span
      class="so-button-space-wrapper"
    >
      Manually close
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render correctly  3`] = `
<div>
  <div
    style="display: flex; align-items: center; margin-bottom: 24px;"
  >
    <div
      class="so-radio-group"
    >
      <div
        class="so-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="so-radio-indicator-wrapper"
        >
          <span
            class="so-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="so-radio-desc"
        >
          top
        </span>
      </div>
      <div
        class="so-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="so-radio-indicator-wrapper"
        >
          <span
            class="so-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="so-radio-desc"
        >
          middle
        </span>
      </div>
      <div
        class="so-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="so-radio-indicator-wrapper"
        >
          <span
            class="so-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="so-radio-desc"
        >
          top-left
        </span>
      </div>
      <div
        class="so-radio-wrapper so-radio-wrapper-checked"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="so-radio-indicator-wrapper"
        >
          <span
            class="so-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="so-radio-desc"
        >
          top-right
        </span>
      </div>
      <div
        class="so-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="so-radio-indicator-wrapper"
        >
          <span
            class="so-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="so-radio-desc"
        >
          bottom-left
        </span>
      </div>
      <div
        class="so-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="so-radio-indicator-wrapper"
        >
          <span
            class="so-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="so-radio-desc"
        >
          bottom-right
        </span>
      </div>
    </div>
  </div>
  <button
    class="so-button-secondary so-button-button so-button-outline"
    type="button"
  >
    <span
      class="so-button-space-wrapper"
    >
      Show message.
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render default 1`] = `
<div
  class="so-message-wrapper"
  data-soui-position="top"
>
  <div
    class="so-message-item so-message-item-show "
  >
    <div
      class="so-message-message so-alert-alert so-alert-warning"
      data-soui-type="message"
    >
      <div
        class="so-alert-content"
      >
        <div
          class="so-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="so-alert-close"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="so-message-item so-message-item-show "
  >
    <div
      class="so-message-message so-alert-alert so-alert-warning"
      data-soui-type="message"
    >
      <div
        class="so-alert-content"
      >
        <div
          class="so-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="so-alert-close"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message[Base] should render default 2`] = `
<div
  class="so-message-wrapper"
  data-soui-position="top"
>
  <div
    class="so-message-item so-message-item-show "
  >
    <div
      class="so-message-message so-alert-alert so-alert-warning"
      data-soui-type="message"
    >
      <div
        class="so-alert-content"
      >
        <div
          class="so-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="so-alert-close"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="so-message-item so-message-item-show "
  >
    <div
      class="so-message-message so-alert-alert so-alert-warning"
      data-soui-type="message"
    >
      <div
        class="so-alert-content"
      >
        <div
          class="so-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="so-alert-close"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
